--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "axios": "^0.19.2",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.3.1",
+    "firebase": "^8.0.1",
     "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.9",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.8.6",
     "react-image-file-resizer": "^0.2.1",
     "react-router-dom": "^5.0.1",
